# netopshub

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/src/netopshub/: __init__.py  cli.py  models.py
backend/src/netopshub/agents/: __init__.py  base.py  compliance_agent.py  coordinator.py  diagnosis_agent.py  discovery_agent.py  forecast_agent.py  knowledge_agent.py  remediation_agent.py  verification_agent.py
backend/src/netopshub/anomaly/: __init__.py  detector.py
backend/src/netopshub/api/: __init__.py  app.py
backend/src/netopshub/collect/: __init__.py  netflow.py  rest_collector.py  snmp.py  syslog.py  unified.py
backend/src/netopshub/config/: __init__.py  manager.py
backend/src/netopshub/discover/: __init__.py  scanner.py  topology.py
backend/src/netopshub/monitor/: __init__.py  alerting.py  health.py  sla.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Alerts.tsx  Chat.tsx  Compliance.tsx  Dashboard.tsx  Topology.tsx
frontend/src/types/: api.ts
tests/: conftest.py
tests/agents/: test_agents.py
tests/anomaly/: test_detector.py
tests/api/: test_api.py
tests/collect/: test_netflow.py  test_rest.py  test_snmp.py  test_syslog.py  test_unified.py
tests/config/: test_config_manager.py
tests/discover/: test_scanner.py  test_topology.py
tests/monitor/: test_alerting.py  test_health.py  test_sla.py
