[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netopshub"
version = "0.1.0"
description = "AI-Native Network Operations Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Corey A. Wade", email = "corey@netopshub.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["network", "monitoring", "ai", "snmp", "netops", "troubleshooting"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]
agents = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "qdrant-client>=1.7.0",
]
all = [
    "netopshub[dev,ml,agents]",
]

[project.scripts]
netopshub = "netopshub.cli:main"

[project.urls]
Homepage = "https://netopshub.com"
Repository = "https://github.com/cwccie/netopshub"
Documentation = "https://docs.netopshub.com"
Issues = "https://github.com/cwccie/netopshub/issues"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
